# dut-program-design

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
data_example/: health_info.csv  pcr_test_result_info.csv  people.csv  vaccine_info.csv
src/: data.cpp  data.h  file.cpp  file.h  io.cpp  io.h  main.cpp  util.cpp  util.h
